--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Akri & Ina Wedding</title>
+    <title>Triono & Ina Wedding</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,25 +18,51 @@
   </head>
   <body>
     
-    <section id="hero" class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-center text-white">
-      <main>
-        <h4>THE WEDDING OF</h4>
-        <h1>Akri & Ina</h1>
-        <br>
-        <h4>KEPADA</h4>
-        <h1>Bapak/Ibu</h1>
-        <br>
-        <p>Tanpa Mengurangi Rasa Hormat, Kami Mengundang Bapak/Ibu/Saudara/i untuk Hadir di Acara Kami.</p>
-        <div class="simply-countdown"></div>
-        <a href="#home" class="btn btn-lg mt-4">
-          <i class="bi bi-envelope-fill"></i>
-          Buka Undangan
-        </a>
+    <section id="hero" class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center text-white">
+      <main class="d-flex justify-content-spacebeetween row">
+        <div class="mt-4">
+          <h4>THE WEDDING OF</h4>
+          <h1>Triono & Ina</h1>
+        </div>
+        <div>
+          <h4>KEPADA</h4>
+          <h1>Bapak/Ibu</h1>
+          <p>Tanpa Mengurangi Rasa Hormat, Kami Mengundang Bapak/Ibu/Saudara/i untuk Hadir di Acara Kami.</p>
+          <div class="simply-countdown"></div>
+          <a href="#home" class="btn btn-lg mt-4">
+            <i class="bi bi-envelope-fill"></i>
+            Buka Undangan
+          </a>
+        </div>
       </main>
     </section>
 
+    <nav class="navbar navbar-expand-md bg-body-tertiary sticky-top my-navbar">
+      <div class="container">
+        <a class="navbar-brand" href="#">Trina</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+          <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Trina</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+          <div class="offcanvas-body">
+            <div class="navbar-nav ms-auto">
+              <a class="nav-link" href="#home">Home</a>
+              <a class="nav-link" href="#info">Info</a>
+              <a class="nav-link" href="#story">Story</a>
+              <a class="nav-link" href="#gallery">Gallery</a>
+              <a class="nav-link" href="#rsvp">RSVP</a>
+              <a class="nav-link" href="#gift">Gift</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
     <div id="home">
-      haloo
+      halo
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
